# humanoid_biped

./: README.md
Documentation/: Welcome file.md
ROS/: usage_instruction.md
arduino_node/: CMakeLists.txt  package.xml
closed_loop_model/: E:\Humanoid\Simscape model\Simscape_model_2\simscape_model\Robot_leg_2_DataFile.mat  Robot_leg_3.slx.autosave  Robot_leg_3.slxc  Trajectory_generation.m  closed_loop_plant.slx  left_ankle_part_Default_sldprt.STEP  left_knee_part_Default_sldprt.STEP  right_ankle_twist_part_Default_sldprt.STEP  right_flextion_part_Default_sldprt.STEP  test.slx  test.slx.autosave  untitled.slx.autosave
dynamixel_control/: CMakeLists.txt  package.xml
hil_matlab_model/: abduction_left_Default_sldprt.STEP  abduction_right_Default_sldprt.STEP  ancle_left_Default_sldprt.STEP  ancle_right_Default_sldprt.STEP  ancle_twist_left_Default_sldprt.STEP  ancle_twist_right_Default_sldprt.STEP  body_Default_sldprt.STEP  gait_generation.asv  gait_generation.m  hip_left_Default_sldprt.STEP  hip_right_Default_sldprt.STEP  knee_left_Default_sldprt.STEP  knee_right_Default_sldprt.STEP  left_ankle_twist_part_Default_sldprt.STEP  leg_model.slx  leg_model.slx.autosave  leg_model.slxc  leg_model_DataFile1.mat  rotation_left_Default_sldprt.STEP  rotation_right_Default_sldprt.STEP
humanoid_robot/humanoid_robot_base/: CMakeLists.txt  package.xml
humanoid_robot/humanoid_robot_base/scripts/: base_control.py  base_loco.py
humanoid_robot/humanoid_robot_base/src/: CMakeLists.txt
robot_nav/: CMakeLists.txt  package.xml
simscape_model/: Robot_leg.slx.autosave  final_gait.m  (+37 more)
(+662 files in other folders)
